# eth-algolab

./: .gitignore  README.md  template.cc  tester.sh
week_01/build_the_sum/: build_the_sum.cc
week_01/deck_of_cards/: deck_of_cards.cc  deck_of_cards_bin_search.cc
week_01/dominoes/: dominoes.cc
week_01/even_matrices/: even_matrices.cc
week_01/even_pairs/: even_pairs.cc
week_01/false_coin/: false_coin.cc
week_02/boats/: boats.cc
week_02/evolution/: evolution.cc
week_02/moving_books/: moving_books.cc
week_02/octopussy/: octopussy.cc
week_02/search_snippets/: search_snippets.cc
week_03/antenna/: CMakeLists.txt  antenna.cc
week_03/attack_of_the_clones/: attack_of_the_clones.cc
week_03/first_hit/: CMakeLists.txt  first_hit.cc
week_03/hiking_maps/: CMakeLists.txt  hiking_maps.cc  hiking_maps_80.cc
week_03/hit/: CMakeLists.txt  hit.cc
week_04/ant_challenge/: ant_challenge.cc
week_04/buddies/: buddies.cc
week_04/building_a_graph/: building_a_graph.cc
week_04/important_bridges/: important_bridges.cc
week_04/theev/: CMakeLists.txt  theev.cc
week_05/avalanche/: avalanche.cc
week_05/burning_coins/: burning_coins.cc
week_05/light_at_the_museum/: light_at_the_museum.cc
week_05/light_pattern/: light_pattern.cc
week_05/poker_chips/: poker_chips.cc
week_05/the_great_game/: the_great_game.cc
week_06/a_new_hope/: a_new_hope.cc
week_06/coin_tossing/: coin_tossing.cc
week_06/kingdom_defence/: kingdom_defence.cc
week_07/diet/: CMakeLists.txt  (+1 more)
week_10/light_the_stage/: CMakeLists.txt  light_the_stage.cc  light_the_stage_naive.cc
(+201 files in other folders)
